include (CTest)

add_executable (init init.c llobj.h)
target_link_libraries (init ll)
add_test (init init)

add_executable (insert insert.c llobj.h)
target_link_libraries (insert ll)
add_test (insert insert)

add_executable (remove remove.c llobj.h)
target_link_libraries (remove ll)
add_test (remove remove)

add_executable (remove_ref remove_ref.c llobj.h)
target_link_libraries (remove_ref ll)
add_test (remove_ref remove_ref)

find_package (Threads)
if (Threads_FOUND)
	if (CMAKE_USE_PTHREADS_INIT)
		add_definitions (-DUSE_POSIX_THREADS)
	elseif (CMAKE_USE_WIN32_THREADS_INIT)
		add_definitions (-DUSE_WIN32_THREADS)
	else ()
		set (Threads_FOUND FALSE FORCE)
	endif ()
endif (Threads_FOUND)
if (Threads_FOUND)
	add_definitions (-pthread)
	add_executable (thr_push thr_push.c llobj.h)
	target_link_libraries (thr_push ll ${CMAKE_THREAD_LIBS_INIT})
	add_test (thr_push thr_push)
endif (Threads_FOUND)
